crates/jsonschema-macros/tests/ui/invalid_required_duplicates.stderr
error: ["a","a"] has non-unique elements
 --> tests/ui/invalid_required_duplicates.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":"object","required":["a","a"]}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
