crates/jsonschema-macros/tests/ui/invalid_required_duplicates.rs
#[jsonschema::validator(schema = r#"{"type":"object","required":["a","a"]}"#)]
struct InvalidRequiredDuplicatesValidator;

fn main() {}
